# brecha-ai-service-py

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  GCP_QUICK_FIX.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup-gcp.sh  test_api.py
.github/workflows/: build-and-deploy.yml  tests.yml
app/: __init__.py  main.py
app/api/routers/: classifier.py
app/core/: config.py  logging_config.py
app/models/: categories.py  schemas.py
app/services/: classifier_service.py
data/: categorias.csv
tests/: conftest.py  test_api.py
